--- a/index.html
+++ b/index.html
@@ -102,12 +102,43 @@
       padding: 18px 0 0;
     }
 
-    h1{
+    .heroLeft h1{
       margin: 8px 0 10px;
       font-size: clamp(36px, 4.2vw, 56px);
-      letter-spacing: -0.6px;
-      line-height: 1.04;
-      font-weight: 950;
+      font-weight: 900;
+      letter-spacing: 0.4px;
+      line-height: 0.98;
+      color: #f7f2dc;
+      text-shadow:
+        0 0 8px rgba(255,215,0,0.16),
+        0 0 18px rgba(255,215,0,0.18),
+        0 0 34px rgba(255,180,0,0.14),
+        0 2px 0 rgba(0,0,0,0.35);
+      position: relative;
+    }
+
+    .heroLeft h1::after{
+      content: "";
+      position: absolute;
+      inset: -8px -12px;
+      pointer-events: none;
+      border-radius: 12px;
+      background:
+        radial-gradient(
+          circle at 50% 55%,
+          rgba(255,215,0,0.12) 0%,
+          rgba(255,215,0,0.06) 35%,
+          rgba(255,215,0,0.00) 70%
+        );
+      filter: blur(10px);
+      opacity: 0.9;
+      animation: heroGoldPulse 2.6s ease-in-out infinite;
+      z-index: -1;
+    }
+
+    @keyframes heroGoldPulse {
+      0%, 100% { opacity: 0.65; transform: scale(0.985); }
+      50%      { opacity: 1;    transform: scale(1.015); }
     }
 
     .lead{
@@ -180,9 +211,59 @@
     }
 
     .subNote{
-      margin-top: 10px;
-      color: rgba(255,255,255,0.55);
-      font-size: 12.5px;
+      display: block;
+      width: 100%;
+      max-width: 560px;
+      margin: 12px auto 0;
+      text-align: center;
+      font-weight: 900;
+      letter-spacing: 0.7px;
+      line-height: 1.15;
+      position: relative;
+      color: rgba(255,255,255,0.95);
+
+      background: linear-gradient(
+        105deg,
+        rgba(255,255,255,0.22) 0%,
+        rgba(255,215,0,0.70) 14%,
+        rgba(255,255,255,1.00) 24%,
+        rgba(255,231,120,0.98) 32%,
+        rgba(255,255,255,0.95) 40%,
+        rgba(255,215,0,0.78) 52%,
+        rgba(255,255,255,0.22) 66%
+      );
+      background-size: 260% 100%;
+      background-position: 180% 50%;
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+
+      text-shadow:
+        0 0 10px rgba(255,215,0,0.10),
+        0 0 22px rgba(255,215,0,0.12),
+        0 0 38px rgba(255,215,0,0.08);
+
+      animation: truthShimmer 2.4s linear infinite;
+    }
+
+    @keyframes truthShimmer {
+      0%   { background-position: 220% 50%; }
+      100% { background-position: -30% 50%; }
+    }
+
+    @media (max-width: 640px){
+      .heroLeft h1{
+        text-shadow:
+          0 0 6px rgba(255,215,0,0.16),
+          0 0 14px rgba(255,215,0,0.16),
+          0 0 24px rgba(255,180,0,0.12),
+          0 2px 0 rgba(0,0,0,0.35);
+      }
+
+      .subNote{
+        letter-spacing: 0.45px;
+        font-size: 12.5px;
+      }
     }
    /* Center the hero logo */
 .hero-logo-wrapper {
